@@ -1,0 +1,7 @@
+.galleria-stage {
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	padding: 0;
+	top:0px;
+}
