@@ -1,3 +1,6 @@
+2013-10-24 Emilie SAGNIEZ  <emilie.sagniez@plan-net.fr>
+	* Add default simplegallery css to adapt image with at gallery width
+	
 2013-08-02 Guillaume GERMAIN <guillaume.germain@plan-net.fr>
 	* Add configurations for simplegallery
 	
